# research-scanner

./: .gitignore  PLAN.md  README.md  poetry.toml  pyproject.toml  requirements.txt
notebooks/: research_scan.ipynb
scripts/: run_pipeline.py  tune.py
src/: fetch.py  gap_analysis.py  topic_model.py  visualize.py
